This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry, noting that the text on each line should not
be longer than the lines of dashes.

Al
------------------------------------------------------------------------------

Fri Oct  5 01:08:14 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Removed files created in compilation from CVS archive, and thus
	  from ELKS distribution set. These were elks/include/compile.h
	  and elks/include/version.h which are both created anew as part
	  of the compilation process.

Thu Oct  4 00:00:00 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Removed empty depend.awk and hfiles.sh from elks/scripts directory.
	* Tweaked elks/Makefile-rules to show my idea of how the Makefile
	  system ought to work. The aim is that the rules in here will be
	  both available and used by every Makefile in the tree.
	* Changed tag v0m0m73 to elks-0_0_73 to match other tags.

Wed Oct  3 23:37:43 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed bug introduced by my commit of 29 Sep 2001 and spotted by
	  Riley earlier today.

Wed Oct  3 18:14:08 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reverted changes accidentally made to remaining Makefiles. There
	  appears to still be a bug in the reversion, which results in
	  as86 being called with bcc's parameters, but the rest is fixed.
	* Discovered bug in HarKal's commit of 29 Sep 2001 and reported it
	  to him for sorting out.

Tue Oct  2 23:22:12 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added missing "### Dependencies:" tags to several Makefiles but
	  still to revert remaining Makefiles.

Tue Oct  2 21:29:28 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.85-PRE3.

	* Reverted changes accidentally made to elks/Makefile previously.
	  Changes to other Makefiles in the tree still have to be reverted.